--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ llvm-sys-160 = { package = "llvm-sys", version = "160.1.2", optional = true }
 llvm-sys-170 = { package = "llvm-sys", version = "170.0.1", optional = true }
 either = "1.9"
 log = "0.4"
+serde = { version = "1.0.201", optional = true }
+serde_json = { version = "1.0.117", optional = true }
 
 [dev-dependencies]
 env_logger = "0.10"
@@ -74,25 +76,25 @@ llvm-17-or-lower = []
 # This avoids activating all the optional dependencies when `strict-versioning`
 # is activated.
 strict-versioning = [
-    "llvm-sys-90?/strict-versioning",
-    "llvm-sys-100?/strict-versioning",
-    "llvm-sys-110?/strict-versioning",
-    "llvm-sys-120?/strict-versioning",
-    "llvm-sys-130?/strict-versioning",
-    "llvm-sys-140?/strict-versioning",
-    "llvm-sys-150?/strict-versioning",
-    "llvm-sys-160?/strict-versioning",
-    "llvm-sys-170?/strict-versioning",
+  "llvm-sys-90?/strict-versioning",
+  "llvm-sys-100?/strict-versioning",
+  "llvm-sys-110?/strict-versioning",
+  "llvm-sys-120?/strict-versioning",
+  "llvm-sys-130?/strict-versioning",
+  "llvm-sys-140?/strict-versioning",
+  "llvm-sys-150?/strict-versioning",
+  "llvm-sys-160?/strict-versioning",
+  "llvm-sys-170?/strict-versioning",
 ]
 
 # The `prefer-dynamic` feature is only available on llvm-sys versions >= 120.
 prefer-dynamic = [
-    "llvm-sys-120?/prefer-dynamic",
-    "llvm-sys-130?/prefer-dynamic",
-    "llvm-sys-140?/prefer-dynamic",
-    "llvm-sys-150?/prefer-dynamic",
-    "llvm-sys-160?/prefer-dynamic",
-    "llvm-sys-170?/prefer-dynamic",
+  "llvm-sys-120?/prefer-dynamic",
+  "llvm-sys-130?/prefer-dynamic",
+  "llvm-sys-140?/prefer-dynamic",
+  "llvm-sys-150?/prefer-dynamic",
+  "llvm-sys-160?/prefer-dynamic",
+  "llvm-sys-170?/prefer-dynamic",
 ]
 
 [package.metadata.docs.rs]
