Revert "Enable stripped down JSON source"
This reverts commit bd55aae84b43ad1d425b91a83b0d3374197178c7.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,18 @@ repository = "https://github.com/cdisselkoen/llvm-ir"
 readme = "README.md"
 keywords = ["llvm", "ir"]
 license = "MIT"
+build = "build.rs"
 
 [dependencies]
+llvm-sys-90 = { package = "llvm-sys", version = "90.2.0", optional = true }
+llvm-sys-100 = { package = "llvm-sys", version = "100.2.0", optional = true }
+llvm-sys-110 = { package = "llvm-sys", version = "110.0.0", optional = true }
+llvm-sys-120 = { package = "llvm-sys", version = "120.2.0", optional = true }
+llvm-sys-130 = { package = "llvm-sys", version = "130.0.0", optional = true }
+llvm-sys-140 = { package = "llvm-sys", version = "140.0.0", optional = true }
+llvm-sys-150 = { package = "llvm-sys", version = "150.1.0", optional = true }
+llvm-sys-160 = { package = "llvm-sys", version = "160.1.2", optional = true }
+llvm-sys-170 = { package = "llvm-sys", version = "170.0.1", optional = true }
 either = "1.9"
 log = "0.4"
 serde = { version = "1.0.201", features = ["derive", "rc"], optional = true }
@@ -23,15 +33,15 @@ itertools = "0.11"
 [features]
 # Select the LLVM version to be compatible with.
 # You _must_ enable exactly one of the following features.
-llvm-9 = ["llvm-9-or-lower", "llvm-9-or-greater"]
-llvm-10 = ["llvm-10-or-lower", "llvm-10-or-greater"]
-llvm-11 = ["llvm-11-or-lower", "llvm-11-or-greater"]
-llvm-12 = ["llvm-12-or-lower", "llvm-12-or-greater"]
-llvm-13 = ["llvm-13-or-lower", "llvm-13-or-greater"]
-llvm-14 = ["llvm-14-or-lower", "llvm-14-or-greater"]
-llvm-15 = ["llvm-15-or-lower", "llvm-15-or-greater"]
-llvm-16 = ["llvm-16-or-lower", "llvm-16-or-greater"]
-llvm-17 = ["llvm-17-or-lower", "llvm-17-or-greater"]
+llvm-9 = ["llvm-sys-90", "llvm-9-or-lower", "llvm-9-or-greater"]
+llvm-10 = ["llvm-sys-100", "llvm-10-or-lower", "llvm-10-or-greater"]
+llvm-11 = ["llvm-sys-110", "llvm-11-or-lower", "llvm-11-or-greater"]
+llvm-12 = ["llvm-sys-120", "llvm-12-or-lower", "llvm-12-or-greater"]
+llvm-13 = ["llvm-sys-130", "llvm-13-or-lower", "llvm-13-or-greater"]
+llvm-14 = ["llvm-sys-140", "llvm-14-or-lower", "llvm-14-or-greater"]
+llvm-15 = ["llvm-sys-150", "llvm-15-or-lower", "llvm-15-or-greater"]
+llvm-16 = ["llvm-sys-160", "llvm-16-or-lower", "llvm-16-or-greater"]
+llvm-17 = ["llvm-sys-170", "llvm-17-or-lower", "llvm-17-or-greater"]
 
 ###
 # For convenience, these automatically-enabled features allow us to avoid
@@ -65,10 +75,27 @@ llvm-17-or-lower = []
 # is already present.
 # This avoids activating all the optional dependencies when `strict-versioning`
 # is activated.
-strict-versioning = []
+strict-versioning = [
+  "llvm-sys-90?/strict-versioning",
+  "llvm-sys-100?/strict-versioning",
+  "llvm-sys-110?/strict-versioning",
+  "llvm-sys-120?/strict-versioning",
+  "llvm-sys-130?/strict-versioning",
+  "llvm-sys-140?/strict-versioning",
+  "llvm-sys-150?/strict-versioning",
+  "llvm-sys-160?/strict-versioning",
+  "llvm-sys-170?/strict-versioning",
+]
 
 # The `prefer-dynamic` feature is only available on llvm-sys versions >= 120.
-prefer-dynamic = []
+prefer-dynamic = [
+  "llvm-sys-120?/prefer-dynamic",
+  "llvm-sys-130?/prefer-dynamic",
+  "llvm-sys-140?/prefer-dynamic",
+  "llvm-sys-150?/prefer-dynamic",
+  "llvm-sys-160?/prefer-dynamic",
+  "llvm-sys-170?/prefer-dynamic",
+]
 
 no-llvm = []
 json = ["serde", "serde_json", "no-llvm"]
